feat: add structure for adding diverse option and custom attributes for user in hive db

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -166,8 +166,9 @@
   "yearsLabel": "{age} Jahre",
   "selectGenderDialogLabel": "Geschlecht auswählen",
   "genderLabel": "Geschlecht",
-  "genderMaleLabel": "♂ männlich",
-  "genderFemaleLabel": "♀ weiblich",
+  "genderMaleLabel": "männlich",
+  "genderFemaleLabel": "weiblich",
+  "genderDiverseLabel": "divers",
 
   "nothingAddedLabel": "Nichts hinzugefügt",
 
